DevOps/qa-flytics/templates/deployment-mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flytics-mongo-express
  namespace: flytics
  labels:
    app: flytics-mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flytics-mongo-express
  template:
    metadata:
      labels:
        app: flytics-mongo-express
    spec:
      containers:
      - name: flytics-mongo-express
        image: mongo-express
        ports:
        - containerPort: 8081
