DevOps/qa-flytics/templates/deployment-mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flyticss-db-mongo
  namespace: flytics
  labels:
    app: flyticss-db-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flyticss-db-mongo
  template:
    metadata:
      labels:
        app: flyticss-db-mongo
    spec:
      containers:
      - name: flyticss-db-mongo
        image: mongo
        # resources:
        #   limits:
        #     memory: "1Gi"
        #     cpu: "1000m"
        ports:
        - containerPort: 27017
        volumeMounts:
          - name: flytics-mongodb-qa
            mountPath: /data/db
      volumes: 
      - name: flytics-mongodb-qa
        persistentVolumeClaim:
          claimName: flytics-mongodb-qa
