DevOps/qa-flytics/templates/service-mongo-express.yaml
apiVersion: v1
kind: Service
metadata:
  name: flytics-mongo-express-service
  namespace: flytics
spec:
  selector:
    app: flytics-mongo-express
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
