DevOps/qa-flytics/templates/service-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: flytics-db-mongo-service
  namespace: flytics
spec:
  selector:
    app: flyticss-db-mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
