DevOps/qa-flytics/templates/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: flytics-redis-qa-service
  namespace: flytics
spec:
  selector:
    app: flytics-redis-qa
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
